BEANUTILS-258 - Add new NumberConverter implementation and switch existing number Converters to use the new implementation. Updated existing test cases for the new features and added BigDecimal/BigInteger tests. Also fixed an issue in BeanUtilsBean which revealled itself once Converters start taking the target type into account.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/beanutils/trunk@471348 13f79535-47bb-0310-9956-ffa450edef68